# projects

./: .gitignore  meson.build
NotepadXX/NotepadXX/: mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
src/: meson.build
src/calc/Calculator/: calculator.cpp  calculator.h  calculator.ui
src/notepad-xx/: MainWindow.ui  meson.build  notepad-xx.qrc
